--- a/src/scss/components/_image.scss
+++ b/src/scss/components/_image.scss
@@ -3,6 +3,6 @@ figcaption {
   font-family: var(--ff-sans);
   font-size: var(--step--1);
   font-style: italic;
-  margin-top: 0.625rem;
+  margin-top: rem(10);
   text-align: center;
 }
