--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -4,13 +4,13 @@
 @mixin visually-hidden {
   border-width: 0;
   clip: rect(0, 0, 0, 0);
-  height: 1px;
-  margin: -1px;
+  height: rem(1);
+  margin: rem(-1);
   overflow: hidden;
   padding: 0;
   position: absolute;
   white-space: nowrap;
-  width: 1px;
+  width: rem(1);
 }
 
 @mixin breakpoint-up($name, $breakpoints: $breakpoints) {
