--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,6 +1,6 @@
 .pagination {
-  padding-bottom: 2.5rem;
-  padding-top: 2.5rem;
+  padding-bottom: rem(40);
+  padding-top: rem(40);
   text-align: center;
 
   @media (min-width: 768px) {
@@ -10,8 +10,8 @@
   }
 
   @media (min-width: 1024px) {
-    padding-bottom: 5rem;
-    padding-top: 5rem;
+    padding-bottom: rem(80);
+    padding-top: rem(80);
     width: 50%;
   }
 
@@ -25,21 +25,21 @@
   flex-direction: row;
   justify-content: center;
   list-style: none;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: rem(24);
+  padding-right: rem(24);
 }
 
 .pagination a {
   align-items: center;
   display: flex;
   flex-direction: row;
-  height: 2rem;
+  height: rem(32);
   justify-content: center;
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+  margin-left: rem(4);
+  margin-right: rem(4);
   text-decoration: underline;
   vertical-align: middle;
-  width: 1.5rem;
+  width: rem(24);
 
   &::after {
     display: none;
@@ -57,6 +57,6 @@
 }
 
 .pagination svg {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: rem(24);
+  width: rem(24);
 }
