--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -4,8 +4,7 @@
 @import
   'abstracts/variables',
   'abstracts/functions',
-
-  'abstracts/mixins', 'abstracts/grid';
+  'abstracts/mixins';
 
 // 2. Vendors
 
@@ -33,7 +32,7 @@
   'components/image',
   'components/nav',
   'components/pagination',
-  'components/single-header';
+  'components/metadata';
 
 // 6. Page-specific styles
 @import
