--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -9,12 +9,12 @@
 
 .footer .container {
   margin: 0 auto;
-  padding: 5rem 1.5rem;
+  padding: rem(80) rem(24);
 }
 
 .footer .logo svg {
   fill: currentColor;
-  width: 12rem;
+  width: rem(192);
 }
 
 .footer a:hover,
@@ -28,24 +28,24 @@
 
 .footer .social,
 .footer .contact {
-  margin-top: 3rem;
+  margin-top: rem(48);
 
   &::before {
     border-bottom: 2px solid $white;
     content: "";
     display: block;
-    margin-bottom: 0.5rem;
+    margin-bottom: rem(8);
     width: 100%;
   }
 }
 
 .footer ul {
   list-style: none;
-  margin-top: 1.5rem;
+  margin-top: rem(24);
 }
 
 .footer li {
-  margin-bottom: 0.5rem;
+  margin-bottom: rem(8);
 }
 
 .footer .social a {
@@ -55,13 +55,13 @@
 .footer .social svg {
   display: inline;
   fill: currentColor;
-  margin-top: -0.25rem;
-  width: 1rem;
+  margin-top: rem(-4);
+  width: rem(16);
 }
 
 .footer .license-credit {
   font-size: var(--step--1);
-  margin-top: 3rem;
+  margin-top: rem(48);
 }
 
 @media screen and (min-width: 1024px) {
@@ -76,7 +76,7 @@
   }
 
   .footer .social {
-    padding-right: 1.5rem;
+    padding-right: rem(24);
     width: (100% / 3);
   }
 
@@ -87,7 +87,7 @@
     width: (100% * 2 / 3);
 
     .h3 {
-      margin-bottom: 1.5rem;
+      margin-bottom: rem(24);
       width: 100%;
     }
 
