--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,8 +9,8 @@
 }
 
 .page--home .banner {
-  background: var(--white);
-  box-shadow: 0 0.1875rem 0.625rem rgba(0, 0, 0, 0.05);
+  background: var(--header-bg, var(--white));
+  box-shadow: 0 rem(3) rem(10) rgba(0, 0, 0, 0.05);
   z-index: 1;
 }
 
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: row;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 rem(24);
 }
 
 .no-js {
@@ -29,7 +29,7 @@
   }
 }
 
-@media screen and (max-width: 1023px) {
+@include breakpoint-down(md) {
   .banner--menu-visible {
     --parent-bg: var(--indigo-800);
     --header-bg: var(--indigo-800);
