--- a/src/scss/pages/_history.scss
+++ b/src/scss/pages/_history.scss
@@ -1,5 +1,5 @@
 .timeline {
-  margin-top: 4rem;
+  margin-top: rem(64);
   position: relative;
 }
 
@@ -7,11 +7,11 @@
   color: transparentize($indigo-500, 0.5);
   left: 0;
   position: absolute;
-  top: 1rem;
+  top: rem(16);
 }
 
 .milestones {
-  padding-left: 2.25rem;
+  padding-left: rem(36);
 }
 
 .milestones dt {
@@ -25,19 +25,19 @@
   border-radius: 50%;
   content: "";
   display: block;
-  height: 0.625rem;
-  left: -40px;
+  height: rem(10);
+  left: rem(-40);
   position: absolute;
-  top: 0.75rem;
-  width: 0.625rem;
+  top: rem(12);
+  width: rem(10);
 }
 
 .milestones dt.major::before {
   background: var(--indigo-800);
-  height: 1.25rem;
-  left: -45px;
-  top: 0.5rem;
-  width: 1.25rem;
+  height: rem(20);
+  left: rem(-45);
+  top: rem(8);
+  width: rem(20);
 }
 
 .milestones dd + dt {
@@ -45,9 +45,9 @@
 }
 
 .milestones dd {
-  margin-top: 0.5rem;
+  margin-top: rem(8);
 }
 
 .milestones dd .description {
-  margin-top: 0.5rem;
+  margin-top: rem(8);
 }
