feat: apply grid to header

--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,5 +1,5 @@
 <header role="banner" class="banner">
-    <div class="container">
+    <div class="wrapper">
         {% include "partials/components/brand.njk" %}
         {% include "partials/components/navigation.njk" %}
     </div>
