--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -6,6 +6,10 @@
 
   background: var(--header-bg, $indigo-100);
   color: var(--header-fg, $black);
+  margin-left: auto;
+  margin-right: auto;
+  max-width: var(--max-width);
+  width: calc(100vw - (2 * var(--gutter)));
 }
 
 .page--home .banner {
@@ -14,16 +18,16 @@
   z-index: 1;
 }
 
-.banner .container {
+.banner .wrapper {
   align-items: center;
   display: flex;
   flex-direction: row;
   margin: 0 auto;
-  padding: 0 rem(24);
+  padding: 0 var(--gutter);
 }
 
 .no-js {
-  .banner > .container {
+  .banner > .wrapper {
     align-items: flex-start;
     flex-direction: column;
   }
@@ -35,5 +39,11 @@
     --header-bg: var(--indigo-800);
     --header-fg: var(--white);
     --header-accent: var(--indigo-500);
+  }
+}
+
+@include breakpoint-up(md) {
+  .banner .wrapper {
+    padding: 0;
   }
 }
