--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -76,7 +76,7 @@ $breakpoints: (
   --max-width: calc((1200 / 16 * 1rem) - var(--gutter));
 }
 
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   :root {
     --step-1: calc(22 / 16 * 1rem);
     --step-2: calc(28 / 16 * 1rem);
