--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,7 +9,21 @@
   margin-left: auto;
   margin-right: auto;
   max-width: var(--max-width);
+  position: relative;
   width: calc(100vw - (2 * var(--gutter)));
+
+  &::after {
+    background: var(--header-bg, $indigo-100);
+    bottom: rem(-10);
+    content: "";
+    display: block;
+    height: calc(100% + #{rem(10)});
+    margin-left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    width: 100vw;
+    z-index: -1;
+  }
 }
 
 .page--home .banner {
