--- a/src/_includes/partials/components/section.njk
+++ b/src/_includes/partials/components/section.njk
@@ -20,7 +20,7 @@
 {{ 'section--image' if section.image }}
 {{ section.desktopAlignment if section.desktopAlignment }}
 {{ 'section--bg-' + section.backgroundColor if section.backgroundColor }}
-{{ 'section--fg-' + section.textColor if section.textColor }}"> 
+{{ 'section--fg-' + section.textColor if section.textColor }}">
     <div class="wrapper">
         {% if section.image and section.imageOrder == 'start' %}
         <figure class="{{ imageOrderDesktop }} {{ 'shadow-' + section.imageShadow if section.imageShadow else 'indigo-500' }}">
@@ -30,7 +30,18 @@
         <div class="section__content">
             {% if section.borderColor %}<span class="hr hr--{{ section.borderColor }}"></span>{% endif %}
             <h2>{{ sectionTitle | safe }}</h2>
-            {{ sectionContent | markdown | safe }}
+            {% if sectionTitle == 'Latest news' %}
+                {% if collections.news.length %}
+                    {% for item in collections.news | limit(2) %}
+                    {% include 'partials/components/post-excerpt.njk' %}
+                    {% endfor %}
+                    <p><a href="/news/">View all</a></p>
+                {% else %}
+                    <p>No news items found.</p>
+                {% endif %}
+            {% else %}
+                {{ sectionContent | markdown | safe }}
+            {% endif %}
         </div>
         {% if section.image and section.imageOrder == 'end' %}
         <figure class="{{ imageOrderDesktop }} shadow-{{ section.imageShadow if section.imageShadow else 'indigo-500' }}">
