--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -4,9 +4,8 @@
 @import
   'abstracts/variables',
   'abstracts/functions',
-  'abstracts/mixins';
-
-// @import 'abstracts/grid';
+  'abstracts/mixins',
+  'abstracts/grid';
 
 // 2. Vendors
 
